unpackaged/main/default/objects/n2de__User_activity_log__c/n2de__User_activity_log__c.object-meta.xml
<CustomObject>
    <description>Tracks user&#39;s log in/log out activity and reasons.</description>
    <label>User activity log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User activity logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>