unpackaged/main/default/objects/n2de__User_activity_log__c/fields/n2de__Action__c.field-meta.xml
<CustomField>
    <fullName>n2de__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Log in</fullName>
                <default>true</default>
                <label>Log in</label>
            </value>
            <value>
                <fullName>Log out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>