unpackaged/main/default/objects/n2de__User_activity_log__c/fields/n2de__User__c.field-meta.xml
<CustomField>
    <fullName>n2de__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Users1</relationshipName>
    <type>Lookup</type>
</CustomField>